--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>DOM Array Methods</title>
 </head>
 <body>
-    
+    <h1>DOM Array Methods</h1>
+    <div class="container">
+        <aside>
+            <button id="add_user">Add User</button>
+            <button id="double">Double Money</button>
+            <button id="show_millionaires">Show only Millionaires</button>
+            <button id="sort">Sort by Richest</button>
+            <button id="calculate_wealth">Calculate entire wealth</button>
+        </aside>
+
+        <main id="main">
+            <h2><strong>Person</strong> Wealth</h2>
+        </main>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
